# ai_website_backend

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  mkdocs.yml  posgress_pgvector.yml  pyproject.toml  run_both.sh  server_run.py
.agents/skills/coding-skills/: SKILL.md
.agents/skills/my-skill/: SKILL.md
assets/plans/: MemoryPlan.md  Migration.md  PonytailAudit.md  async_db_usage_example.py
docs/: architecture.md  auth.md  data-flows.md  features.md  index.md  tools.md
migrations/: env.py
migrations/versions/: 15c150151ed4_initial_commit_with_db_and_indexed.py  57b132de810f_initial_migration.py
scripts/: create_admin.py
src/agents/: base.py  factory.py  session.py
src/agents/indusnet/: agent.py  constants.py  prompts.py  state.py
src/agents/indusnet/handlers/: data_handler.py
src/agents/prompts/: humanization.py
src/api/: main.py
src/api/models/: api_schemas.py  db_schemas.py  schemas.py
src/api/routes/: auth.py  token.py
src/auth/: dependencies.py  jwt.py
src/core/: config.py  database.py  logger.py
src/services/livekit/: livekit_svc.py
src/services/llm/: client.py  infographic.py  media_assets.py  parsers.py  prompts.py  ui_agent.py
src/services/mail/: calender_invite.py  context_email.py  submission_receipt.py
src/services/memory/: __init__.py  dual_layer_svc.py  persona_svc.py  session_svc.py
src/services/search/: __init__.py  searxng_svc.py
src/services/vectordb/: vectordb_svc.py
src/services/whatsapp/: context_whatsapp.py
vaani_library/: README.md
(+20 files in other folders)
